# unassemblize

./: BUILDING.md  CMakeLists.txt  executable.cpp  executable.h  function.cpp  function.h  gitinfo.cpp.in  gitinfo.h  main.cpp
.github/workflows/: ci.yaml
cmake/: ClangFormat.cmake
wincompat/: getopt.h  strings.h
